# qa_guru

./: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: test.yaml
app/: ApiMockClient.py  main.py
app/database/: users.py
app/routers/: status.py  users.py
homework_1/: .env.sample  readme.md  reqres.py  requirements.txt  test_users.py  test_users_with_mock.py
homework_1/app/: main.py
homework_1/app/database/: engine.py  users.py
homework_1/app/models/: user.py
homework_1/app/routers/: status.py  users.py
homework_1/models/: user.py
homework_1/tests/: test_smoke.py  test_users_with_mock.py
tests/: conftest.py  test_pagination_users.py  test_smoke.py  test_users.py  test_users_with_mock.py
